--- a/src/interface.scss
+++ b/src/interface.scss
@@ -2,10 +2,12 @@
 // colors vars
 
 $bcgColor: #fcecdd;
-$borderColor: #ff6701;
+$postColor: #fff7ee;
+$hoverColor: #ff6701;
 $activeColor: #ffc288;
 $textColor: #474747e0;
 $mainTextColor: #141414f5;
+$borderColor: #7e7e7eb2;
 
 // style
 
