Доделана разметка элементов и их стили

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -2,3 +2,9 @@
     max-width: 1000px;
     margin: 100px auto;
 }
+
+.search-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
