--- a/src/components/search-panel/search-panel.scss
+++ b/src/components/search-panel/search-panel.scss
@@ -1,28 +1,27 @@
-.search-panel {
+.search-wrapper__panel {
     background: $postColor;
     flex-grow: 10;
+}
+
+.panel {
     border: 1px solid $borderColor;
     border-radius: 4px;
     padding: 8px;
-    margin-right: 5px;
+    margin-right: 20px;
+
     &:focus {
-        border: 3px solid $hoverColor;
-        outline: 3px solid $activeColor;
-        outline-offset: -5px;
         transition: 0.2s ease-in-out;
+        border: 3px solid $activeColor;
+        box-shadow: 0 0 0 4px $hoverColor;
+        outline: none;
         padding: 6px;
+
     }
 
-    
     &:hover {
         transition: 0.2s ease-in-out;
-        border: 3px solid $hoverColor;
+        border: 3px solid $activeColor;
         padding: 6px;
     }
 
-    &-wrapper {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 30px;
-    }
 }
