--- a/src/interface.scss
+++ b/src/interface.scss
@@ -3,8 +3,8 @@
 
 $bcgColor: #fcecdd;
 $postColor: #fff7ee;
-$hoverColor: #ff6701;
-$activeColor: #ffc288;
+$activeColor: #ff7518;
+$hoverColor: #ffc288;
 $textColor: #474747e0;
 $mainTextColor: #141414f5;
 $borderColor: #7e7e7eb2;
