--- a/src/components/post-status-filter/post-status-filter.scss
+++ b/src/components/post-status-filter/post-status-filter.scss
@@ -1,9 +1,34 @@
+
+.btn {
+    cursor: pointer;
+    background: $bcgColor;
+    border: 1px solid $borderColor;
+    
+    &:hover {
+        transition: 0.2s ease-in-out;
+        border: 3px solid $activeColor;
+        padding: 0 4px 0 4px;
+    }
+
+    &:focus {
+        outline: none;
+    }
+
+    &:active {
+        transition: 0.2s;
+        background: $hoverColor;
+        border: 3px solid $hoverColor;
+        color: white;
+    }
+
+}
+
 .btn-group {
     display: flex;
-    flex-grow: 2;
+    flex-grow: 1;
     
     &__all {
-        flex-grow: 1;
+        flex-grow: 2;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
     }
@@ -21,22 +46,16 @@
         border-bottom-right-radius: 4px;
     }
 
-}
-
-.search-btn {
-    cursor: pointer;
-    background: $bcgColor;
-    border: 1px solid $borderColor;
-    &:hover {
+    &_active {
         transition: 0.2s ease-in-out;
-        border: 3px solid $hoverColor;
+        border: 3px solid $activeColor;
+        padding: 0 4px 0 4px;
+        background: $activeColor;
+        color: white;
+
+        &:focus {
+            outline: none;
+        }
     }
 
-}
-
-.search-btn_active {
-    transition: 0.2s ease-in-out;
-    border: 3px solid $hoverColor;
-    background: $hoverColor;
-    color: white;
 }
