--- a/src/components/post-list-item/post-list-item.scss
+++ b/src/components/post-list-item/post-list-item.scss
@@ -9,6 +9,7 @@
     &-item {
         list-style-type: none;
         margin-top: 10px;
+        position: relative;
         &__wrapper {
             display: flex;
             justify-content: space-between;
@@ -17,7 +18,6 @@
             border: 1px solid $borderColor;
             border-radius: 4px;
             background: $postColor;
-        
         }
     
         &:first-child {
