--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,4 @@
 @import './components/post-add-form/post-add-form.scss';
 @import './components/post-status-filter/post-status-filter.scss';
 @import './components/search-panel/search-panel.scss';
+@import './components/burger-menu/burger-menu.scss';
